# UnitV2Framework

./: CMakeLists.txt  README.md  buid.sh
include/: AngleNet.h  AudioFFT.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h  base.h  framework.h
include/ncnn/: layer_declaration.h  layer_registry.h  platform.h
main/: audio_fft.cpp  camera_stream.cpp  code_detector.cpp  color_tracker.cpp  face_detector.cpp  face_recognition.cpp  lane_line_tracker.cpp  motion_tracker.cpp  object_recognition.cpp  online_classifier.cpp  shape_detector.cpp  shape_matching.cpp  target_tracker.cpp
src/: AudioFFT.cpp  CrnnNet.cpp  DbNet.cpp  arcface.cpp  framework.cpp
